<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.tallesperozzo.filmesfamososparte2.activities.DetailActivity"
    tools:showIn="@layout/activity_detail"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/movie_ll"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_weight="1"
                            android:id="@+id/frame_layout"
                            android:layout_width="0dp"
                            android:layout_height="240dp">

                            <ImageView
                                android:id="@+id/backdrop_image_iv"
                                android:layout_width="match_parent"
                                android:layout_height="240dp"
                                />

                            <ProgressBar
                                android:id="@+id/backdrop_image_pb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:indeterminate="true"
                                android:layout_gravity="center"/>

                        </FrameLayout>

                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:layout_margin="8dp"/>

                            <TextView
                                android:id="@+id/date_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:layout_margin="8dp"/>

                            <TextView
                                android:id="@+id/vote_average_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/vote_average"
                                android:textSize="16sp"
                                android:layout_margin="8dp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/overview_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textSize="16sp"
                        android:layout_margin="8dp"/>







                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/trailers_cv"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_margin="8dp"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/trailers_rv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:nestedScrollingEnabled="false">

                        </android.support.v7.widget.RecyclerView>

                        <ProgressBar
                            android:id="@+id/trailers_pb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:indeterminate="true" />
                    </FrameLayout>

            </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/reviews_cv"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_margin="8dp"/>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/reviews_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_marginBottom="16dp">
                    </android.support.v7.widget.RecyclerView>

                    <ProgressBar
                        android:id="@+id/reviews_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:indeterminate="true" />

                </FrameLayout>



            </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>





    </ScrollView>


</RelativeLayout>